--- a/app/src/main/res/layout/activity_unpaid_students.xml
+++ b/app/src/main/res/layout/activity_unpaid_students.xml
@@ -4,6 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fdo.prasanga.studentmanagementsystem.UnpaidStudentsActivity">
+    tools:context="com.fdo.prasanga.studentmanagementsystem.UnpaidStudentsActivity"
+    tools:layout_editor_absoluteY="81dp">
 
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
+        android:layout_marginEnd="11dp"
+        android:layout_marginStart="11dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
