--- a/app/src/main/res/layout/activity_fees2.xml
+++ b/app/src/main/res/layout/activity_fees2.xml
@@ -8,17 +8,6 @@
     tools:layout_editor_absoluteY="81dp">
 
 
-    <Button
-        android:id="@+id/btn_getDate"
-        android:layout_width="0dp"
-        android:layout_height="37dp"
-        android:layout_marginEnd="16dp"
-        android:text="Select date"
-        android:textSize="12dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_completePaytment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_completePaytment" />
-
     <TextView
         android:id="@+id/tv_CurrentDate"
         android:layout_width="wrap_content"
@@ -57,12 +46,10 @@
         android:id="@+id/btn_completePaytment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="27dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginStart="29dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginStart="120dp"
         android:text="Complete Payment"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_getDate"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -100,7 +87,7 @@
         android:id="@+id/tv_Fee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="28dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/tv_CurrentDate"
         app:layout_constraintTop_toBottomOf="@+id/tv_CurrentDate" />
@@ -129,16 +116,22 @@
         android:id="@+id/dtp_Calendar"
         android:layout_width="0dp"
         android:layout_height="115dp"
-        android:layout_marginBottom="110dp"
         android:layout_marginEnd="70dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="108dp"
         android:calendarViewShown="false"
         android:datePickerMode="spinner"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_getDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LKR"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_Fee"
+        app:layout_constraintStart_toEndOf="@+id/tv_Fee" />
 
 
 </android.support.constraint.ConstraintLayout>
