--- a/app/src/main/res/layout/activity_unpaid_student_info.xml
+++ b/app/src/main/res/layout/activity_unpaid_student_info.xml
@@ -4,47 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fdo.prasanga.studentmanagementsystem.UnpaidStudentInfoActivity">
+    tools:context="com.fdo.prasanga.studentmanagementsystem.UnpaidStudentInfoActivity"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
-        android:id="@+id/tv_pickup_Address"
+        android:id="@+id/tv_up_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="151dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginEnd="74dp"
+        android:layout_marginStart="74dp"
+        android:layout_marginTop="61dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="27dp"
-        android:layout_marginStart="11dp"
-        android:text="Pickup Address"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/textView4" />
+        android:layout_marginStart="109dp"
+        android:text="Name"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_up_Name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_up_Name" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="52dp"
-        android:text="Delivery Address"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_delivery_Address"
-        app:layout_constraintEnd_toStartOf="@+id/tv_delivery_Address"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_delivery_Address" />
+        android:layout_marginTop="31dp"
+        android:text="Address"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/tv_delivery_Address"
+        android:id="@+id/tv_up_Address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="13dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="31dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/tv_pickup_Address"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pickup_Address" />
+        app:layout_constraintStart_toStartOf="@+id/tv_up_Name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_up_Name" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Grade"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="85dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="210dp"
+        android:text="Parent's Contact Number"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_up_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/tv_up_Address"
+        app:layout_constraintTop_toBottomOf="@+id/tv_up_Address" />
+
+    <TextView
+        android:id="@+id/tv_up_p_Num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="37dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/tv_up_grade"
+        app:layout_constraintTop_toBottomOf="@+id/tv_up_grade" />
+
 </android.support.constraint.ConstraintLayout>
