--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -29,7 +29,7 @@
         android:id="@+id/btn_ViewStudentDetails"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="52dp"
         android:alpha="0.8"
         android:text="View Student Details"
         app:layout_constraintBottom_toTopOf="@+id/btn_CalculateFees"
@@ -43,25 +43,24 @@
         android:id="@+id/btn_CalculateFees"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="48dp"
         android:alpha="0.8"
         android:text="Calculate Fees"
-        android:layout_marginBottom="51dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_ViewUnpaidStudents"
-        tools:layout_constraintRight_creator="1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/btn_ViewStudentDetails"
         app:layout_constraintRight_toRightOf="@+id/btn_ViewStudentDetails"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_ViewStudentDetails"
-        app:layout_constraintHorizontal_bias="0.0" />
+        tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/btn_ViewUnpaidStudents"
         android:layout_width="205dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="76dp"
         android:alpha="0.8"
         android:text="View Unpaid Students"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
