--- a/app/src/main/res/layout/activity_fees2.xml
+++ b/app/src/main/res/layout/activity_fees2.xml
@@ -12,35 +12,35 @@
         android:id="@+id/tv_CurrentDate"
         android:layout_width="wrap_content"
         android:layout_height="27dp"
-        android:layout_marginBottom="114dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginBottom="132dp"
+        android:layout_marginTop="131dp"
         android:text="TextView"
         android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="@+id/tv_grade"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintBottom_toTopOf="@+id/dtp_Calendar"
+        app:layout_constraintStart_toStartOf="@+id/tv_Fee"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="33dp"
         android:layout_marginStart="18dp"
         android:text="Current Date: "
-        android:textSize="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_CurrentDate"
         app:layout_constraintStart_toStartOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="167dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="146dp"
+        android:layout_width="0dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="291dp"
         android:text="Select Next Payment Date"
         android:textColor="#000"
-        app:layout_constraintBottom_toTopOf="@+id/btn_generateInvoice"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tv_Fee"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,102 +48,120 @@
         android:id="@+id/btn_completePaytment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="33dp"
+        android:layout_marginEnd="120dp"
         android:layout_marginStart="120dp"
         android:text="Complete Payment"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="17dp"
+        android:layout_marginTop="26dp"
         android:text="Grade: "
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_grade"
-        app:layout_constraintEnd_toStartOf="@+id/tv_studentID" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/tv_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginBottom="48dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/tv_studentID"
-        app:layout_constraintTop_toBottomOf="@+id/tv_studentID" />
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_CurrentDate"
+        app:layout_constraintStart_toStartOf="@+id/tv_studentID" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="46dp"
-        android:layout_marginEnd="43dp"
+        android:layout_marginEnd="41dp"
         android:layout_marginStart="43dp"
+        android:layout_marginTop="29dp"
         android:text="Calculated Fee:"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_Fee"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/tv_Fee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginEnd="12dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/tv_CurrentDate"
-        app:layout_constraintTop_toBottomOf="@+id/tv_CurrentDate" />
+        android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/tv_studentID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="59dp"
-        android:layout_marginTop="39dp"
+        android:layout_width="0dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="52dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginTop="42dp"
         android:ems="10"
         android:inputType="number"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_grade"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="16dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="58dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="39dp"
         android:text="Student ID: "
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_studentID"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/textView3" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_studentID"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <DatePicker
         android:id="@+id/dtp_Calendar"
         android:layout_width="0dp"
-        android:layout_height="115dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="9dp"
         android:layout_marginEnd="70dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="13dp"
         android:calendarViewShown="false"
         android:datePickerMode="spinner"
+        app:layout_constraintBottom_toTopOf="@+id/btn_generateInvoice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="59dp"
+        android:layout_marginTop="29dp"
         android:text="LKR"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_Fee"
-        app:layout_constraintStart_toEndOf="@+id/tv_Fee" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_CurrentDate" />
 
     <Button
         android:id="@+id/btn_generateInvoice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="97dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginEnd="6dp"
         android:text="Generate Invoice"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_completePaytment"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_completePaytment"
+        app:layout_constraintEnd_toEndOf="@+id/btn_completePaytment" />
 
 
 </android.support.constraint.ConstraintLayout>
