--- a/app/src/main/res/layout/activity_unpaid_student_info.xml
+++ b/app/src/main/res/layout/activity_unpaid_student_info.xml
@@ -11,20 +11,20 @@
         android:id="@+id/tv_up_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="74dp"
-        android:layout_marginStart="74dp"
-        android:layout_marginTop="61dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginTop="127dp"
         android:text="TextView"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="109dp"
-        android:text="Name"
+        android:layout_marginStart="16dp"
+        android:text="Name: "
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_up_Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_up_Name" />
@@ -33,57 +33,65 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
-        android:text="Address"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="64dp"
+        android:text="Address: "
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/tv_up_Address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginTop="59dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/tv_up_Name"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_up_Name" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Grade"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="50dp"
+        android:text="Grade: "
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="85dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="210dp"
-        android:text="Parent's Contact Number"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="16dp"
+        android:text="Parent's Contact Number: "
+        android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_up_p_Num"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_up_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginTop="55dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/tv_up_Address"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_up_Address" />
 
     <TextView
         android:id="@+id/tv_up_p_Num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
+        android:layout_marginBottom="190dp"
+        android:layout_marginEnd="36dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/tv_up_grade"
-        app:layout_constraintTop_toBottomOf="@+id/tv_up_grade" />
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
