--- a/app/src/main/res/layout/activity_unpaid_students.xml
+++ b/app/src/main/res/layout/activity_unpaid_students.xml
@@ -10,13 +10,27 @@
     <ListView
         android:id="@+id/lv"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="11dp"
         android:layout_marginStart="11dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="19dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="28dp"
+        android:text="Please click on the student ID to view info"
+        app:layout_constraintBottom_toTopOf="@+id/lv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
